fix(deploy): add spa rewrite for vercel

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/api/(.*)",
       "destination": "https://financial-dashboard-5o14.onrender.com/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
