fix(deploy): set vercel build and output directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,8 @@
 {
-  "builds": [
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "frontend/dist/frontend"
-      }
-    }
-  ],
+  "version": 2,
+  "installCommand": "cd frontend && npm install",
+  "buildCommand": "cd frontend && npm run build",
+  "outputDirectory": "frontend/dist/frontend",
   "routes": [
     {
       "src": "/api/(.*)",
