--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "installCommand": "cd frontend && npm install",
   "buildCommand": "cd frontend && npm run build",
-  "outputDirectory": "frontend/dist/frontend",
+  "outputDirectory": "frontend/dist/frontend/browser",
   "routes": [
     {
       "src": "/api/(.*)",
