--- a/vercel.json
+++ b/vercel.json
@@ -3,17 +3,14 @@
   "installCommand": "cd frontend && npm install",
   "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/dist/frontend/browser",
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "https://financial-dashboard-5o14.onrender.com/$1"
+      "source": "/api/:path*",
+      "destination": "https://financial-dashboard-5o14.onrender.com/:path*"
     },
     {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
